--- a/lab3.html
+++ b/lab3.html
@@ -104,7 +104,7 @@
         <img src="assets/img/fotos lab 3/Processados/gabriel_avatar_JPEG.png" alt="foto do Gabriel" class="handcam">
 
         <h3>Tabela comparando os tamanhos originais e os comprimidos</h3>
-        <img src="assets/img/fotos lab 3/tabela_pct.png" alt="tabela porcentagem" class="equacao">
+        <img src="assets/img/fotos lab 3/tabela_bytes.png" alt="tabela porcentagem" class="equacao">
         <img src="assets/img/fotos lab 3/tabela_pct.png" alt="tabela em bytes" class="equacao">
 
         <h3></h3>
